--- a/index.html
+++ b/index.html
@@ -500,19 +500,19 @@
                         <div class="slider-container">
                             <div class="slider-track">
                                 <div class="slide">
-                                    <img src="img/outdoor/1.png" loading="lazy" decoding="async" alt="Outdoor amenity 1" class="slider-image">
+                                    <img src="img/outdoor/1.jpg" loading="lazy" decoding="async" alt="Outdoor amenity 1" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/outdoor/2.png" loading="lazy" decoding="async" alt="Outdoor amenity 2" class="slider-image">
+                                    <img src="img/outdoor/2.jpg" loading="lazy" decoding="async" alt="Outdoor amenity 2" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/outdoor/3.png" loading="lazy" decoding="async" alt="Outdoor amenity 3" class="slider-image">
+                                    <img src="img/outdoor/3.jpg" loading="lazy" decoding="async" alt="Outdoor amenity 3" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/outdoor/4.png" loading="lazy" decoding="async" alt="Outdoor amenity 4" class="slider-image">
+                                    <img src="img/outdoor/4.jpg" loading="lazy" decoding="async" alt="Outdoor amenity 4" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/outdoor/5.png" loading="lazy" decoding="async" alt="Outdoor amenity 5" class="slider-image">
+                                    <img src="img/outdoor/5.jpg" loading="lazy" decoding="async" alt="Outdoor amenity 5" class="slider-image">
                                 </div>
                             </div>
                             <button class="slider-nav-arrow" id="amenOutNext">
